--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -2,6 +2,7 @@
     border: 1px solid burlywood;
     padding: 5px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: start;
 }
